--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.6",
     "web-vitals": "^2.1.4",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
