--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-tabs": "^6.0.2",
     "swiper": "^11.1.9",
     "tailwindcss": "^3.4.6",
     "web-vitals": "^2.1.4",
