--- a/package.json
+++ b/package.json
@@ -3,24 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
+    "lucide-react": "^0.428.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
     "react-lottie": "^1.2.4",
     "react-query": "^3.39.3",
+    "react-resizable-panels": "^2.1.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
     "swiper": "^11.1.9",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.6",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0",
+    "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
   "scripts": {
