--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "lucide-react": "^0.428.0",
+    "next-themes": "^0.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -30,6 +31,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
+    "sonner": "^1.5.0",
     "swiper": "^11.1.9",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.6",
