--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
+    "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "swiper": "^11.1.9",
     "tailwind-merge": "^2.5.2",
