--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cmdk": "1.0.0",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
+    "i18next": "^23.14.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.1",
     "lucide-react": "^0.428.0",
