--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.6",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1",
     "web-vitals": "^2.1.4",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
