--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-themes": "^0.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-i18next": "^15.0.1",
