--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.1",
     "lucide-react": "^0.428.0",
+    "moment": "^2.30.1",
     "next-themes": "^0.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
