--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "i18next": "^23.14.0",
@@ -35,6 +36,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-cookie": "^7.2.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-i18next": "^15.0.1",
