Adding Feature Checkout

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 GENERATE_SOURCEMAP=FALSE
 
 # BASEURL
-REACT_APP_BASE_URL="https://api-bisa-nota.vercel.app"
+# REACT_APP_BASE_URL="https://api-bisa-nota.vercel.app"
+REACT_APP_BASE_URL="http://localhost:5000"
