--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -46,6 +47,7 @@
     "react-resizable-panels": "^2.1.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.15.1",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "swiper": "^11.1.9",
